# cobrarCPLEX

./: .gitignore  DESCRIPTION  NAMESPACE  README.Rmd  README.md  cobrarCPLEX.Rproj  configure  configure.ac
R/: LPproblem_cplexClass.R  RcppExports.R  cobrarCPLEX.R  fba2.R
src/: Makevars.in  RcppExports.cpp  cplex.cpp
